--- a/src/app/Core/components/movie-detail/movie-detail.component.css
+++ b/src/app/Core/components/movie-detail/movie-detail.component.css
@@ -1,12 +1,3 @@
-:root {
-  --primary-color: #3a2d69;
-}
-.mat-mdc-button, .mat-mdc-raised-button, .mat-mdc-fab{
-  color: white !important;
-}
-.mat-mdc-progress-bar .mdc-linear-progress__bar-inner {
-  background-color: var(--primary-color) !important;
-}
 .tagline {
   font-style: italic;
   font-size: 1.25rem;
@@ -62,24 +53,24 @@
 .video-container {
   padding-top: 56.25%; /* 16:9 aspect ratio */
   position: relative;
-  iframe {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    border: none;
-    border-radius: 4px;
-  }
+}
+iframe {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  border: none;
+  border-radius: 4px;
 }
 
    /* Hero Section */
         .hero-section {
-            position: relative;
+         position: relative;
             height: 709px;
+            width: 100%;
             border-radius: 12px;
             overflow: hidden;
-            margin: 0 80px;
-            background-size: cover;
-            background-position: center;
+            margin-bottom: 60px;
+            border-image-source: linear-gradient(180deg, #262626 0%, #26262600 100%);
         }
 
         .hero-overlay {
@@ -240,24 +231,52 @@
             cursor: pointer;
         }
 
-        .cast-gallery {
+
+        .cast-list {
             display: flex;
-            gap: 10px;
-            overflow-x: auto;
-            scrollbar-width: none; /* Firefox */
-            padding-bottom: 10px;
+            gap: 20px;
+            margin-bottom: 30px;
         }
 
-        .cast-gallery::-webkit-scrollbar {
-            display: none; /* Chrome, Safari, Edge */
-        }
 
-        .cast-image {
-            width: 89px;
-            height: 87px;
-            border-radius: 10px;
-            object-fit: cover;
-        }
+.cast-gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+
+
+/* seka dots Clacket */
+::ng-deep .owl-theme .owl-dots {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 0 12px;
+  margin-bottom: 10px;
+}
+
+::ng-deep .owl-theme .owl-dots .owl-dot span {
+  width: 10px;
+  height: 4px;
+  background: #333 !important;
+  border-radius: 2px;
+  margin: 0 !important;
+  transition: all 0.3s ease;
+}
+
+::ng-deep .owl-theme .owl-dots .owl-dot.active span {
+  width: 20px !important;
+  background: #e50000 !important;
+}
+
+::ng-deep .owl-theme .owl-dots .owl-dot:hover span {
+  background: #e50000 !important;
+}
+
 
         /* Reviews Section */
         .reviews-header {
@@ -477,4 +496,44 @@
         .crew-location {
             font-size: 14px;
             color: #999999;
+        }
+
+         /* Responsive */
+        @media (max-width: 1024px) {
+            header, .hero-section, .content-container, .free-trial-banner, footer {
+                padding: 40px;
+                margin: 0 40px;
+            }
+
+            .content-container {
+                flex-direction: column;
+            }
+
+            .right-column {
+                order: -1;
+            }
+        }
+
+        @media (max-width: 768px) {
+            header, .hero-section, .content-container, .free-trial-banner, footer {
+                padding: 20px;
+                margin: 0 20px;
+            }
+
+            .nav-container {
+                display: none;
+            }
+
+            .reviews-container {
+                flex-direction: column;
+            }
+
+            .footer-container {
+                flex-wrap: wrap;
+                gap: 30px;
+            }
+
+            .footer-column {
+                width: 45%;
+            }
         }
