--- a/src/app/Core/components/movie-detail/movie-detail.component.html
+++ b/src/app/Core/components/movie-detail/movie-detail.component.html
@@ -1,70 +1,78 @@
-<div class="container">
+<div class="container-fluid">
   <div class="movie-detail" *ngIf="movie">
 
 
-<!-- what happen here ??  -->
-
-    <!-- <div class="backdrop" [style.backgroundImage]="'url(' + (movie.backdrop_path | tmdbImageUrl) + ')'" >
-      <div class="backdrop-overlay"></div>
-    </div> -->
-
-
-
-
-      <section class="hero-section" [ngStyle]="{
+    <section class="hero-section" [ngStyle]="{
         'background-image': 'url(' + (movie.backdrop_path | tmdbImageUrl) + ')' ,
         'background-size': 'cover',
-        'background-position': 'center center',
+        'background-position': 'center',
         'width': '100%',
         }">
-            <div class="hero-overlay">
-                <h1 class="movie-title">{{ movie.title }}</h1>
-                <p class="movie-description">{{ movie.overview }}</p>
-                <div class="action-buttons">
-                    <button class="play-button">
-                        <img src="images/img_icon_1.svg" alt="Play">
-                        Play Now
-                    </button>
-                    <button class="action-icon-button">
-                        <img src="images/img_vector_12x12.svg" alt="Add to list">
-                    </button>
-                    <button class="action-icon-button">
-                        <img src="images/img_vector_18x19.svg" alt="Like">
-                    </button>
-                    <button class="action-icon-button">
-                        <img src="images/img_vector_17x19.svg" alt="Volume">
-                    </button>
-                </div>
+      <div class="hero-overlay">
+        <h1 class="movie-title">{{ movie.title }}</h1>
+        <p class="movie-description">{{ movie.overview }}</p>
+        <div class="action-buttons">
+          <button class="play-button">
+            <img src="images/img_icon_1.svg" alt="Play">
+            Play Now
+          </button>
+          <button *ngIf="WatchlistMovielist.includes(movie.id)" (click)="RemoveFromWatchlist(movie.id)"
+            class="action-icon-button " style="background-color: #262626;">
+            <i class="fa-solid fa-minus text-white "></i>
+          </button>
+          <button *ngIf="!WatchlistMovielist.includes(movie.id)" (click)="addToWatchList(movie.id)"
+            class="action-icon-button ">
+            <img src="images/img_vector_12x12.svg" alt="Add to list">
+          </button>
+          <button class="action-icon-button">
+            <img src="images/img_vector_18x19.svg" alt="Like">
+          </button>
+          <button class="action-icon-button">
+            <img src="images/img_vector_17x19.svg" alt="Volume">
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <div class="content-container">
+      <div class="left-column">
+        <div class="info-card">
+          <h2 class="info-card-title">Description</h2>
+          <p class="info-card-content">{{ movie.overview }}</p>
+        </div>
+
+        <div class="info-card">
+          <div class="cast-header">
+            <h2 class="info-card-title">Cast</h2>
+            <div class="cast-navigation">
+              <button class="nav-button" (click)="goPrev()">
+                <img src="images/img_vector_619.svg" alt="Previous">
+              </button>
+              <button class="nav-button" (click)="goNext()">
+                <img src="images/img_icon_2.svg" alt="Next">
+              </button>
             </div>
-        </section>
+          </div>
+          <div class=" " style="width: 500px;">
+            <section>
+              <owl-carousel-o #castCarousel [options]="castSliderOptions">
+                @for (cast of movie.credits.cast; track cast.id) {
+                <ng-template carouselSlide *ngIf="cast.profile_path">
+                  <div class="cast-gallery">
+                    <img  class="w-100" [src]="cast.profile_path | tmdbImageUrl"
+                      [alt]="cast.name" [title]="cast.name" />
+                      <h3 class="h5 detail-title mt-2">{{cast.name.split(" ").join("")}}</h3>
+                  </div>
+                </ng-template>
+                }
+              </owl-carousel-o>
+            </section>
+          </div>
 
-  <div class="content-container">
-            <div class="left-column">
-                <div class="info-card">
-                    <h2 class="info-card-title">Description</h2>
-                    <p class="info-card-content">{{ movie.overview }}</p>
-                </div>
 
-                <div class="info-card">
-                    <div class="cast-header">
-                        <h2 class="info-card-title">Cast</h2>
-                        <div class="cast-navigation">
-                            <button class="nav-button">
-                                <img src="images/img_vector_619.svg" alt="Previous">
-                            </button>
-                            <button class="nav-button">
-                                <img src="images/img_vector_12x15.svg" alt="Next">
-                            </button>
-                        </div>
-                    </div>
-                    <div class="cast-gallery">
-                        <img src="../assets/images/img_image_89x87.png" alt="Cast member" class="cast-image">
-                        <!-- <app-trending-movies-section></app-trending-movies-section> -->
-                    </div>
-                </div>
-
-                <div class="info-card">
-                    <!-- <div class="reviews-header">
+          <!-- <app-trending-movies-section></app-trending-movies-section> -->
+          <div class="info-card ">
+            <!-- <div class="reviews-header">
                         <h2 class="info-card-title">Reviews</h2>
                         <button class="add-review-button">
                             <img src="../assets/images/img_icon_2.svg" alt="Add">
@@ -125,171 +133,160 @@
                         </button>
                     </div> -->
 
-<div class="video-container">
-            <iframe
-              *ngIf="movie.videos.results.length > 0"
-              [src]="videoUrl"
-              class="movie-video"
-              frameborder="0"
-            ></iframe>
-          </div>
 
-                </div>
+            <h3 class="detail-title mb-2"><i class="fa-solid fa-video me-2"></i> Trailer</h3>
+            <div class="video-container">
+              <iframe *ngIf="movie.videos.results.length > 0" [src]="videoUrl" class="movie-video"
+                frameborder="0"></iframe>
             </div>
 
-            <div class="right-column">
-                <div class="info-card">
-                    <div class="detail-section">
-                        <div class="detail-header">
-                            <img src="../assets/images/img_icon_20x20.svg" alt="Calendar">
-                            <h3 class="detail-title">Released Year</h3>
-                        </div>
-                        <p class="detail-content">2022</p>
-                    </div>
+          </div>
+        </div>
 
-                    <div class="detail-section">
-                        <div class="detail-header">
-                            <img src="../assets/images/img_icon_3.svg" alt="Language">
-                            <h3 class="detail-title">Available Languages</h3>
-                        </div>
-                        <div class="language-tags">
-                            <span class="language-tag">English</span>
-                            <span class="language-tag">Hindi</span>
-                            <span class="language-tag">Tamil</span>
-                            <span class="language-tag">Telegu</span>
-                            <span class="language-tag">Kannada</span>
-                        </div>
-                    </div>
-
-                    <div class="detail-section">
-                        <div class="detail-header">
-                            <img src="/images/Rateing_icon_4.svg" alt="Star">
-                            <h3 class="detail-title mb-0">Ratings</h3>
-                        </div>
-                        <div class="ratings-container">
-                            <div class="rating-card">
-                                <h4 class="rating-source">IMDb</h4>
-                                <div class="stars-container">
-                                    <div class="star filled"></div>
-                                    <div class="star filled"></div>
-                                    <div class="star filled"></div>
-                                    <div class="star filled"></div>
-                                    <img src="images/rating.svg" alt="Half star" class="star">
-                                </div>
-                                <span class="rating-text">4.5</span>
-                            </div>
-
-                            <div class="rating-card">
-                                <h4 class="rating-source">Streamvibe</h4>
-                                <div class="stars-container">
-                              <div *ngFor="let star of [1,2,3,4,5]"
-                                                  class="star"
-                                                  [class.filled]="star <= (movie.vote_average / 2)"></div>
-                                    <div class="star" style="background-color: #999999;"></div>
-                                </div>
-                                <span class="rating-text">{{movie.vote_average.toFixed(1)}}</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="detail-section">
-                        <div class="detail-header">
-                            <img src="/images/Geners.svg" alt="Genre">
-                            <h3 class="detail-title mb-0">Gernes</h3>
-                        </div>
-                        <div class="genre-tags">
-                          <ng-container *ngFor="let genre of movie.genres">
-                            <span class="genre-tag">{{genre.name}}</span>
-
-                          </ng-container>
-
-                        </div>
-                    </div>
-
-                    <div class="detail-section">
-                        <h3 class="detail-title">Director</h3>
-                        <div class="crew-card">
-                            <img src="{{getDirector()?.profile_path | tmdbImageUrl }}" alt="Rishab Shetty" class="crew-image">
-                            <div class="crew-info">
-                                <h4>{{getDirector()?.name}}</h4>
-                                <!-- <p class="crew-location">From India</p> -->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="detail-section">
-                        <h3 class="detail-title">Music</h3>
-                        <div class="crew-card">
-                            <img src="{{getMusicain()?.profile_path | tmdbImageUrl }}" alt="B. Ajaneesh Loknath" class="crew-image">
-                            <div class="crew-info">
-                                <h4>{{getMusicain()?.name}}</h4>
-                                <!-- <p class="crew-location">From India</p> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="right-column">
+          <div class="info-card">
+            <div class="detail-section">
+              <div class="detail-header">
+                <img src="images/img_icon_20x20.svg" alt="Calendar">
+                <h3 class="detail-title mb-0">Released Year</h3>
+              </div>
+              <p class="detail-content">{{movie.release_date.split('-')[0]}}</p>
             </div>
-        </div>
+            <div class="detail-section">
+              <div class="detail-header">
+                <img src="images/clock.svg" alt="Language">
+                <h3 class="detail-title mb-0">Runtime</h3>
+              </div>
+              <p class="detail-content">{{ movie.runtime }} min</p>
+            </div>
 
 
 
-    <div class="content">
-      <div class="movie-info">
-        <div class="details">
-          <img mat-card-image src="{{(movie.poster_path | tmdbImageUrl: 'w185') || '/images/Clacket.jpg'}}" alt="{{ movie.title }} Poster" class="movie-poster" />
-          <h1>{{ movie.title }}</h1>
-          <p class="tagline" *ngIf="movie.tagline">“{{ movie.tagline }}”</p>
-          <div class="meta">
-            <mat-chip-set>
-              <mat-chip color="accent">
-                <mat-icon>star</mat-icon>
-                {{ movie.vote_average }} ({{ movie.vote_count }} votes)
-              </mat-chip>
-              <mat-chip>Release Date: {{ movie.release_date | date }}</mat-chip>
-              <mat-chip>Runtime: {{ movie.runtime }} min</mat-chip>
-              <mat-chip>Genres:
-                <ng-container *ngFor="let genre of movie.genres; let i = index">
-                  {{ genre.name }}<span *ngIf="i < movie.genres.length - 1">, </span>
+            <div class="detail-section">
+              <div class="detail-header">
+                <img src="images/lang.svg" alt="Language">
+                <h3 class="detail-title mb-0">Available Languages</h3>
+              </div>
+              <div class="language-tags">
+                <ng-container *ngFor="let language of movie.spoken_languages">
+                  <span class="language-tag">{{language.english_name}}</span>
+
                 </ng-container>
-              </mat-chip>
-              <mat-chip>Language: {{ movie.original_language | uppercase }}</mat-chip>
-              <mat-chip>Budget: {{ movie.budget | currency }}</mat-chip>
-              <mat-chip>Revenue: {{ movie.revenue | currency }}</mat-chip>
-              <mat-chip>Production Companies:
-                <ng-container *ngFor="let company of movie.production_companies; let i = index">
-                  {{ company.name }}<span *ngIf="i < movie.production_companies.length - 1">, </span>
+
+              </div>
+            </div>
+
+            <div class="detail-section">
+              <div class="detail-header">
+                <img src="/images/Rateing_icon_4.svg" alt="Star">
+                <h3 class="detail-title mb-0">Ratings</h3>
+              </div>
+              <div class="ratings-container ">
+                <div class="rating-card">
+                  <h4 class="rating-source">Clacket</h4>
+                  <div class="stars-container">
+                    <i class="fa-solid fa-star " style="color:#e50000 ;"></i>
+                  </div>
+                  <span class="rating-text">4.5</span>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="detail-section">
+              <div class="detail-header">
+                <img src="/images/Geners.svg" alt="Genre">
+                <h3 class="detail-title mb-0">Gernes</h3>
+              </div>
+              <div class="genre-tags">
+                <ng-container *ngFor="let genre of movie.genres">
+                  <span class="genre-tag">{{genre.name}}</span>
+
                 </ng-container>
-              </mat-chip>
-              <mat-chip>Spoken Languages:
-                <ng-container *ngFor="let language of movie.spoken_languages; let i = index">
-                  {{ language.name }}<span *ngIf="i < movie.spoken_languages.length - 1">, </span>
-                </ng-container>
-              </mat-chip>
-            </mat-chip-set>
+
+              </div>
+            </div>
+
+            <div class="detail-section">
+              <h3 class="detail-title">Director</h3>
+              <div class="crew-card">
+                <img src="{{getDirector()?.profile_path | tmdbImageUrl }}" alt="Rishab Shetty" class="crew-image">
+                <div class="crew-info">
+                  <h4>{{getDirector()?.name}}</h4>
+                  <!-- <p class="crew-location">From India</p> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="detail-section">
+              <h3 class="detail-title">Music</h3>
+              <div class="crew-card">
+                <img src="{{getMusicain()?.profile_path | tmdbImageUrl }}" alt="B. Ajaneesh Loknath" class="crew-image">
+                <div class="crew-info">
+                  <h4>{{getMusicain()?.name}}</h4>
+                  <!-- <p class="crew-location">From India</p> -->
+                </div>
+              </div>
+            </div>
           </div>
-          <p class="overview">{{ movie.overview }}</p>
         </div>
-        <section class="trailer" *ngIf="movie.videos.results.length">
-          <div class="video-container">
-            <iframe
-              *ngIf="movie.videos.results.length > 0"
-              [src]="videoUrl"
-              class="movie-video"
-              frameborder="0"
-            ></iframe>
-          </div>
-        </section>
-        <app-cast-carousel [castList]="movie.credits.cast"></app-cast-carousel>
       </div>
+
+
+
+      <div class="content">
+        <div class="movie-info">
+          <div class="details">
+            <img mat-card-image src="{{(movie.poster_path | tmdbImageUrl: 'w185') || '/images/Clacket.jpg'}}"
+              alt="{{ movie.title }} Poster" class="movie-poster" />
+            <h1>{{ movie.title }}</h1>
+            <p class="tagline" *ngIf="movie.tagline">“{{ movie.tagline }}”</p>
+            <div class="meta">
+              <mat-chip-set>
+                <mat-chip color="accent">
+                  <mat-icon>star</mat-icon>
+                  {{ movie.vote_average }} ({{ movie.vote_count }} votes)
+                </mat-chip>
+                <mat-chip>Release Date: {{ movie.release_date | date }}</mat-chip>
+                <mat-chip>Runtime: {{ movie.runtime }} min</mat-chip>
+                <mat-chip>Genres:
+                  <ng-container *ngFor="let genre of movie.genres; let i = index">
+                    {{ genre.name }}<span *ngIf="i < movie.genres.length - 1">, </span>
+                  </ng-container>
+                </mat-chip>
+                <mat-chip>Language: {{ movie.original_language | uppercase }}</mat-chip>
+                <mat-chip>Budget: {{ movie.budget | currency }}</mat-chip>
+                <mat-chip>Revenue: {{ movie.revenue | currency }}</mat-chip>
+                <mat-chip>Production Companies:
+                  <ng-container *ngFor="let company of movie.production_companies; let i = index">
+                    {{ company.name }}<span *ngIf="i < movie.production_companies.length - 1">, </span>
+                  </ng-container>
+                </mat-chip>
+                <mat-chip>Spoken Languages:
+                  <ng-container *ngFor="let language of movie.spoken_languages; let i = index">
+                    {{ language.name }}<span *ngIf="i < movie.spoken_languages.length - 1">, </span>
+                  </ng-container>
+                </mat-chip>
+              </mat-chip-set>
+            </div>
+            <p class="overview">{{ movie.overview }}</p>
+          </div>
+          <section class="trailer" *ngIf="movie.videos.results.length">
+            <div class="video-container">
+              <iframe *ngIf="movie.videos.results.length > 0" [src]="videoUrl" class="movie-video"
+                frameborder="0"></iframe>
+            </div>
+          </section>
+          <app-cast-carousel [castList]="movie.credits.cast"></app-cast-carousel>
+        </div>
+      </div>
+
+
+
+
+
+
     </div>
 
-
-
-
-
-
+    <button class="play-button " (click)="goBack()">Back</button>
   </div>
-
-  <button mat-raised-button color="primary" (click)="goBack()">Back</button>
-</div>
-
