--- a/src/app/Views/Components/nav-blank/nav-blank.component.html
+++ b/src/app/Views/Components/nav-blank/nav-blank.component.html
@@ -46,10 +46,10 @@
 
             <nav class="nav-menu">
                 <div class="nav-item active"   routerLinkActive="active"  routerLink="home">Home</div>
-                <div class="nav-item"  routerLinkActive="active"  routerLink="details/1144430">Movies & Shows</div>
+                <div class="nav-item"  routerLinkActive="active"  routerLink="movies-show">Movies & Shows</div>
+                <!-- <div class="nav-item"  routerLinkActive="active"  routerLink="details/1144430">Details</div> -->
                 <div class="nav-item"  routerLinkActive="active"  routerLink="WatchlistMovie">WatchlistMovie</div>
-                <div class="nav-item"  routerLinkActive="active"  routerLink="details">Subscriptions : DE</div>
-                <div class="nav-item"  routerLinkActive="active"  routerLink="movie-search">movie-search</div>
+                <!-- <div class="nav-item"  routerLinkActive="active"  routerLink="movie-search">movie-search</div> -->
             </nav>
 
             <div class="header-icons">
