edit details view and added dashboard for admin user and fixing some bugs

--- a/src/app/Core/components/dashboard/dashboard.component.html
+++ b/src/app/Core/components/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
-<iframe
-  [src]="powerBiUrl"
-  width="100%"
-  height="600"
-  frameborder="1" 
-  style="border: none"> 
-</iframe>
+<div class="powerbi-container d-flex justify-content-center align-items-center">
+  <iframe
+    [src]="powerBiUrl"
+    class="powerbi-frame"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+</div>
