--- a/src/app/Views/Components/home/home.component.html
+++ b/src/app/Views/Components/home/home.component.html
@@ -189,7 +189,7 @@
         <div class="hero-content">
             <h1 class="hero-title fw-bolder">The Best Streaming Experience</h1>
             <p class="hero-description fw-bolder">Clacket is the best streaming experience for watching your favorite movies and shows on demand, anytime, anywhere. With StreamVibe, you can enjoy a wide variety of content, including the latest blockbusters, classic movies, popular TV shows, and more. You can also create your own watchlists, so you can easily find the content you want to watch.</p>
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" routerLink="/movies-show">
                 <img src="images/img_icon_1.svg" alt="Play icon" class="btn-icon">
                 Start Watching Now
             </button>
