--- a/src/app/Views/Components/nav-auth/nav-auth.component.html
+++ b/src/app/Views/Components/nav-auth/nav-auth.component.html
@@ -21,7 +21,7 @@
     <div class="container header-container">
 
       <div class="logo">
-        <img src="/images/img_logo.svg" alt="StreamVibe Logo" height="50">
+        <img src="images/img_logo.svg" alt="StreamVibe Logo">
       </div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,8 +30,8 @@
 
       <div class="collapse navbar-collapse  py-3 " id="navbarNav">
         <nav class="nav-menu ms-auto">
-          <div class="nav-item active" routerLinkActive="active" routerLink="login">Login</div>
-          <div class="nav-item" routerLinkActive="active" routerLink="register">Register</div>
+          <div class="nav-item active" routerLinkActive="active" routerLink="/login">Login</div>
+          <div class="nav-item" routerLinkActive="active" routerLink="/register">Register</div>
         </nav>
       </div>
     </div>
