--- a/src/app/Views/Components/register/register.component.html
+++ b/src/app/Views/Components/register/register.component.html
@@ -3,7 +3,7 @@
   <div class="row w-100 h-100">
     <div class="col-12 col-lg-5 d-flex align-items-center justify-content-center">
       <div class="login-box w-100 rounded-2 custom-shadow">
-        <h2><i class="fas fa-film"></i> StreamViebs</h2>
+        <h2><i class="fas fa-film"></i> StreamVibe</h2>
         <form [formGroup]="registerForm" (ngSubmit)="Register(registerForm)">
 
            <div class="mb-3">
