--- a/src/app/Core/components/movie-detail/movie-detail.component.css
+++ b/src/app/Core/components/movie-detail/movie-detail.component.css
@@ -117,7 +117,14 @@ iframe {
             font-size: 14px;
             font-weight: 600;
             cursor: pointer;
-        }
+          }
+.btn-back {
+  width: 120px;
+  transition: all 0.5s ease-in-out;
+}
+          .btn-back:hover{
+            width: 25% !important;
+          }
 
         .play-button img {
             margin-right: 4px;
@@ -537,3 +544,7 @@ iframe {
                 width: 45%;
             }
         }
+.left-column,
+.right-column {
+  width: 100%;
+}
