--- a/src/app/Core/components/movie-detail/movie-detail.component.html
+++ b/src/app/Core/components/movie-detail/movie-detail.component.html
@@ -34,45 +34,217 @@
       </div>
     </section>
 
-    <div class="content-container">
-      <div class="left-column">
-        <div class="info-card">
-          <h2 class="info-card-title">Description</h2>
-          <p class="info-card-content">{{ movie.overview }}</p>
+    <div class="container-fluid">
+      <div class="row gx-4" >
+        <div class="col-lg-8 col-md-12 mb-4" >
+          <div class="left-column">
+
+            <div class="info-card">
+      <h2 class="info-card-title">Description</h2>
+      <p class="info-card-content">{{ movie.overview }}</p>
+            </div>
+
+ <div class="info-card position-relative ">
+      <div class="cast-header">
+        <h2 class="info-card-title">Cast</h2>
+        <div class="cast-navigation">
+          <button class="nav-button" (click)="goPrev()">
+            <img src="images/img_vector_619.svg" alt="Previous">
+          </button>
+          <button class="nav-button" (click)="goNext()">
+            <img src="images/img_icon_2.svg" alt="Next">
+          </button>
+        </div>
+      </div>
+      <div class="w-100 " >
+        <section>
+          <owl-carousel-o #castCarousel [options]="castSliderOptions">
+            @for (cast of movie.credits.cast; track cast.id) {
+            <ng-template carouselSlide *ngIf="cast.profile_path">
+              <div class="cast-gallery">
+                <img  class="w-75 rounded" [src]="cast.profile_path | tmdbImageUrl"
+                  [alt]="cast.name" [title]="cast.name" />
+                  <h3 class="h5 detail-title mt-2">{{cast.name.split(" ").join("")}}</h3>
+              </div>
+            </ng-template>
+            }
+          </owl-carousel-o>
+        </section>
+      </div>
+
+      <div class="info-card  position-relative ">
+        <h3 class="detail-title position-absolute" style="top: 10px; left: 10px;"><i class="fa-solid fa-video me-2"></i> Trailer</h3>
+        <div class="video-container">
+          <iframe *ngIf="movie.videos.results.length > 0" [src]="videoUrl" class="movie-video"
+            frameborder="0"></iframe>
+
+
+
         </div>
 
-        <div class="info-card">
-          <div class="cast-header">
-            <h2 class="info-card-title">Cast</h2>
-            <div class="cast-navigation">
-              <button class="nav-button" (click)="goPrev()">
-                <img src="images/img_vector_619.svg" alt="Previous">
-              </button>
-              <button class="nav-button" (click)="goNext()">
-                <img src="images/img_icon_2.svg" alt="Next">
-              </button>
+      </div>
+      <button class="play-button btn-back justify-content-center ms-auto position-absolute bottom-0 end-0 fw-bolder" (click)="goBack()">Back</button>
             </div>
+
           </div>
-          <div class=" " style="width: 500px;">
-            <section>
-              <owl-carousel-o #castCarousel [options]="castSliderOptions">
-                @for (cast of movie.credits.cast; track cast.id) {
-                <ng-template carouselSlide *ngIf="cast.profile_path">
-                  <div class="cast-gallery">
-                    <img  class="w-100" [src]="cast.profile_path | tmdbImageUrl"
-                      [alt]="cast.name" [title]="cast.name" />
-                      <h3 class="h5 detail-title mt-2">{{cast.name.split(" ").join("")}}</h3>
-                  </div>
-                </ng-template>
-                }
-              </owl-carousel-o>
-            </section>
-          </div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+                  <div class="right-column">
+                      <div class="info-card">
+             <div class="detail-section">
+               <div class="detail-header">
+                 <img src="images/img_icon_20x20.svg" alt="Calendar">
+                 <h3 class="detail-title mb-0">Released Year</h3>
+               </div>
+               <p class="detail-content">{{movie.release_date.split('-')[0]}}</p>
+             </div>
+             <div class="detail-section">
+               <div class="detail-header">
+                 <img src="images/clock.svg" alt="Language">
+                 <h3 class="detail-title mb-0">Runtime</h3>
+               </div>
+               <p class="detail-content">{{ movie.runtime }} min</p>
+             </div>
 
 
-          <!-- <app-trending-movies-section></app-trending-movies-section> -->
-          <div class="info-card ">
-            <!-- <div class="reviews-header">
+
+             <div class="detail-section">
+               <div class="detail-header">
+                 <img src="images/lang.svg" alt="Language">
+                 <h3 class="detail-title mb-0">Available Languages</h3>
+               </div>
+               <div class="language-tags">
+                 <ng-container *ngFor="let language of movie.spoken_languages">
+                   <span class="language-tag">{{language.english_name}}</span>
+
+                 </ng-container>
+
+               </div>
+             </div>
+
+             <div class="detail-section">
+               <div class="detail-header">
+                 <img src="/images/Rateing_icon_4.svg" alt="Star">
+                 <h3 class="detail-title mb-0">Ratings</h3>
+               </div>
+               <div class="ratings-container ">
+                 <div class="rating-card">
+                   <h4 class="rating-source">StreamVibe</h4>
+                   <div class="stars-container">
+                     <i class="fa-solid fa-star " style="color:#e50000 ;"></i>
+                   </div>
+                   <span class="rating-text">{{ movie.vote_average | number: '1.1-1'  }}</span>
+                 </div>
+
+               </div>
+             </div>
+
+             <div class="detail-section">
+               <div class="detail-header">
+                 <img src="/images/Geners.svg" alt="Genre">
+                 <h3 class="detail-title mb-0">Gernes</h3>
+               </div>
+               <div class="genre-tags">
+                 <ng-container *ngFor="let genre of movie.genres">
+                   <span class="genre-tag">{{genre.name}}</span>
+
+                 </ng-container>
+
+               </div>
+             </div>
+
+             <div class="detail-section" *ngIf="getDirector()?.profile_path">
+               <h3 class="detail-title">Director</h3>
+               <div class="crew-card">
+                 <img src="{{getDirector()?.profile_path | tmdbImageUrl }}" alt="Rishab Shetty" class="crew-image">
+                 <div class="crew-info">
+                   <h4>{{getDirector()?.name}}</h4>
+                 </div>
+               </div>
+             </div>
+
+             <div class="detail-section" *ngIf="getMusicain()?.profile_path">
+               <h3 class="detail-title">Music</h3>
+               <div class="crew-card">
+                 <img src="{{getMusicain()?.profile_path | tmdbImageUrl }}" alt="B. Ajaneesh Loknath" class="crew-image">
+                 <div class="crew-info">
+                   <h4>{{getMusicain()?.name}}</h4>
+                 </div>
+               </div>
+             </div>
+                      </div>
+                </div>
+
+      </div>
+
+
+
+
+
+
+    </div>
+
+  </div>
+
+
+
+
+
+
+
+      <!-- <div class="content">
+        <div class="movie-info">
+          <div class="details">
+            <img mat-card-image src="{{(movie.poster_path | tmdbImageUrl: 'w185') || '/images/Clacket.jpg'}}"
+              alt="{{ movie.title }} Poster" class="movie-poster" />
+            <h1>{{ movie.title }}</h1>
+            <p class="tagline" *ngIf="movie.tagline">“{{ movie.tagline }}”</p>
+            <div class="meta">
+              <mat-chip-set>
+                <mat-chip color="accent">
+                  <mat-icon>star</mat-icon>
+                  {{ movie.vote_average }} ({{ movie.vote_count }} votes)
+                </mat-chip>
+                <mat-chip>Release Date: {{ movie.release_date | date }}</mat-chip>
+                <mat-chip>Runtime: {{ movie.runtime }} min</mat-chip>
+                <mat-chip>Genres:
+                  <ng-container *ngFor="let genre of movie.genres; let i = index">
+                    {{ genre.name }}<span *ngIf="i < movie.genres.length - 1">, </span>
+                  </ng-container>
+                </mat-chip>
+                <mat-chip>Language: {{ movie.original_language | uppercase }}</mat-chip>
+                <mat-chip>Budget: {{ movie.budget | currency }}</mat-chip>
+                <mat-chip>Revenue: {{ movie.revenue | currency }}</mat-chip>
+                <mat-chip>Production Companies:
+                  <ng-container *ngFor="let company of movie.production_companies; let i = index">
+                    {{ company.name }}<span *ngIf="i < movie.production_companies.length - 1">, </span>
+                  </ng-container>
+                </mat-chip>
+                <mat-chip>Spoken Languages:
+                  <ng-container *ngFor="let language of movie.spoken_languages; let i = index">
+                    {{ language.name }}<span *ngIf="i < movie.spoken_languages.length - 1">, </span>
+                  </ng-container>
+                </mat-chip>
+              </mat-chip-set>
+            </div>
+            <p class="overview">{{ movie.overview }}</p>
+          </div>
+          <section class="trailer" *ngIf="movie.videos.results.length">
+            <div class="video-container">
+              <iframe *ngIf="movie.videos.results.length > 0" [src]="videoUrl" class="movie-video"
+                frameborder="0"></iframe>
+            </div>
+          </section>
+          <app-cast-carousel [castList]="movie.credits.cast"></app-cast-carousel>
+        </div>
+      </div> -->
+
+
+
+
+
+
+      <!-- <div class="reviews-header">
                         <h2 class="info-card-title">Reviews</h2>
                         <button class="add-review-button">
                             <img src="../assets/images/img_icon_2.svg" alt="Add">
@@ -132,161 +304,3 @@
                             <img src="../assets/images/img_vector_12x15.svg" alt="Next">
                         </button>
                     </div> -->
-
-
-            <h3 class="detail-title mb-2"><i class="fa-solid fa-video me-2"></i> Trailer</h3>
-            <div class="video-container">
-              <iframe *ngIf="movie.videos.results.length > 0" [src]="videoUrl" class="movie-video"
-                frameborder="0"></iframe>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="right-column">
-          <div class="info-card">
-            <div class="detail-section">
-              <div class="detail-header">
-                <img src="images/img_icon_20x20.svg" alt="Calendar">
-                <h3 class="detail-title mb-0">Released Year</h3>
-              </div>
-              <p class="detail-content">{{movie.release_date.split('-')[0]}}</p>
-            </div>
-            <div class="detail-section">
-              <div class="detail-header">
-                <img src="images/clock.svg" alt="Language">
-                <h3 class="detail-title mb-0">Runtime</h3>
-              </div>
-              <p class="detail-content">{{ movie.runtime }} min</p>
-            </div>
-
-
-
-            <div class="detail-section">
-              <div class="detail-header">
-                <img src="images/lang.svg" alt="Language">
-                <h3 class="detail-title mb-0">Available Languages</h3>
-              </div>
-              <div class="language-tags">
-                <ng-container *ngFor="let language of movie.spoken_languages">
-                  <span class="language-tag">{{language.english_name}}</span>
-
-                </ng-container>
-
-              </div>
-            </div>
-
-            <div class="detail-section">
-              <div class="detail-header">
-                <img src="/images/Rateing_icon_4.svg" alt="Star">
-                <h3 class="detail-title mb-0">Ratings</h3>
-              </div>
-              <div class="ratings-container ">
-                <div class="rating-card">
-                  <h4 class="rating-source">Clacket</h4>
-                  <div class="stars-container">
-                    <i class="fa-solid fa-star " style="color:#e50000 ;"></i>
-                  </div>
-                  <span class="rating-text">4.5</span>
-                </div>
-
-              </div>
-            </div>
-
-            <div class="detail-section">
-              <div class="detail-header">
-                <img src="/images/Geners.svg" alt="Genre">
-                <h3 class="detail-title mb-0">Gernes</h3>
-              </div>
-              <div class="genre-tags">
-                <ng-container *ngFor="let genre of movie.genres">
-                  <span class="genre-tag">{{genre.name}}</span>
-
-                </ng-container>
-
-              </div>
-            </div>
-
-            <div class="detail-section">
-              <h3 class="detail-title">Director</h3>
-              <div class="crew-card">
-                <img src="{{getDirector()?.profile_path | tmdbImageUrl }}" alt="Rishab Shetty" class="crew-image">
-                <div class="crew-info">
-                  <h4>{{getDirector()?.name}}</h4>
-                  <!-- <p class="crew-location">From India</p> -->
-                </div>
-              </div>
-            </div>
-
-            <div class="detail-section">
-              <h3 class="detail-title">Music</h3>
-              <div class="crew-card">
-                <img src="{{getMusicain()?.profile_path | tmdbImageUrl }}" alt="B. Ajaneesh Loknath" class="crew-image">
-                <div class="crew-info">
-                  <h4>{{getMusicain()?.name}}</h4>
-                  <!-- <p class="crew-location">From India</p> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div class="content">
-        <div class="movie-info">
-          <div class="details">
-            <img mat-card-image src="{{(movie.poster_path | tmdbImageUrl: 'w185') || '/images/Clacket.jpg'}}"
-              alt="{{ movie.title }} Poster" class="movie-poster" />
-            <h1>{{ movie.title }}</h1>
-            <p class="tagline" *ngIf="movie.tagline">“{{ movie.tagline }}”</p>
-            <div class="meta">
-              <mat-chip-set>
-                <mat-chip color="accent">
-                  <mat-icon>star</mat-icon>
-                  {{ movie.vote_average }} ({{ movie.vote_count }} votes)
-                </mat-chip>
-                <mat-chip>Release Date: {{ movie.release_date | date }}</mat-chip>
-                <mat-chip>Runtime: {{ movie.runtime }} min</mat-chip>
-                <mat-chip>Genres:
-                  <ng-container *ngFor="let genre of movie.genres; let i = index">
-                    {{ genre.name }}<span *ngIf="i < movie.genres.length - 1">, </span>
-                  </ng-container>
-                </mat-chip>
-                <mat-chip>Language: {{ movie.original_language | uppercase }}</mat-chip>
-                <mat-chip>Budget: {{ movie.budget | currency }}</mat-chip>
-                <mat-chip>Revenue: {{ movie.revenue | currency }}</mat-chip>
-                <mat-chip>Production Companies:
-                  <ng-container *ngFor="let company of movie.production_companies; let i = index">
-                    {{ company.name }}<span *ngIf="i < movie.production_companies.length - 1">, </span>
-                  </ng-container>
-                </mat-chip>
-                <mat-chip>Spoken Languages:
-                  <ng-container *ngFor="let language of movie.spoken_languages; let i = index">
-                    {{ language.name }}<span *ngIf="i < movie.spoken_languages.length - 1">, </span>
-                  </ng-container>
-                </mat-chip>
-              </mat-chip-set>
-            </div>
-            <p class="overview">{{ movie.overview }}</p>
-          </div>
-          <section class="trailer" *ngIf="movie.videos.results.length">
-            <div class="video-container">
-              <iframe *ngIf="movie.videos.results.length > 0" [src]="videoUrl" class="movie-video"
-                frameborder="0"></iframe>
-            </div>
-          </section>
-          <app-cast-carousel [castList]="movie.credits.cast"></app-cast-carousel>
-        </div>
-      </div>
-
-
-
-
-
-
-    </div>
-
-    <button class="play-button " (click)="goBack()">Back</button>
-  </div>
