--- a/src/app/Views/Components/NotFound/NotFound.component.html
+++ b/src/app/Views/Components/NotFound/NotFound.component.html
@@ -4,5 +4,5 @@
   <p class="error-description">
     The page you're looking for doesn't exist .
   </p>
-  <a routerLink="home" class="home-button">Return to Home</a>
+  <a routerLink="/home" class="home-button cursor-pointer">Return to Home</a>
 </div>
